# wexan

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/app_core/: CMakeLists.txt
components/app_core/include/app/: runtime.h
components/app_core/include/app_core/: app_event_handlers.h  app_pagination.h
components/app_core/src/: app_event_handlers.c  runtime_api.c  runtime_events.c  runtime_handlers.c  runtime_scan_controller.c  runtime_scan_controller.h  runtime_screen.c  runtime_state.h  runtime_worker.c
components/battery_service/: CMakeLists.txt
components/battery_service/include/power/: deep_sleep.h
components/battery_service/src/: deep_sleep.c
components/bluetooth_service/: CMakeLists.txt
components/bluetooth_service/include/net/: bluetooth.h
components/bluetooth_service/src/: bluetooth_cache.c  bluetooth_cache.h  bluetooth_gap_handlers.c  bluetooth_gap_handlers.h  bluetooth_init.c  bluetooth_init.h  bluetooth_internal.h  bluetooth_scan.c  bluetooth_scan_engine.c  bluetooth_scan_engine.h  bluetooth_scan_runtime.h  bluetooth_text.c
components/ui_display/: CMakeLists.txt
components/ui_display/include/ui/: monitor.h
components/ui_display/src/: monitor_boot.c  monitor_hw.c  monitor_internal.h  monitor_menu.c  monitor_menu_icon_factory.c  monitor_menu_icon_factory.h  monitor_menu_icons.c  monitor_menu_internal.h  monitor_menu_layout.c  monitor_text.c
components/ui_input/: CMakeLists.txt
components/ui_input/include/ui/: buttons.h
components/ui_input/src/: buttons.c
components/wifi_service/: CMakeLists.txt
components/wifi_service/include/net/: wifi.h
components/wifi_service/src/: wifi_internal.h  wifi_scan.c  wifi_text.c
design/: home_menu_mock.html
icon/: monitor_menu_icon_bitmaps.c  monitor_menu_icon_bitmaps.h
main/: CMakeLists.txt  idf_component.yml  main.c
